[tool.poetry]
name = "advent23"
version = "0.1.0"
description = "Advent of Code 2023"
authors = ["Christian Blunden <christian.blunden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
